# geonode-mapstore-client

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CNAME  LICENSE  MANIFEST.in  Makefile  README.md  VERSION  changelog.html  nexus_geonode.session.sql  package.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  main.yml  test.yml
docs/: build.md  client.md  development.md  structure.md
docs/customizations/: custom-branch.md  index.md  override-local-config.md  settings-variables.md  theme-variables.md  theme.html
geonode_mapstore_client/: __init__.py  apps.py  context_processors.py  converters.py  hooksets.py  settings.py  utils.py
geonode_mapstore_client/client/: .env.sample  .eslintignore  .eslintrc  .gitignore  .npmignore  README.hbs  README.md  bootstrap-theme.html  build.sh  builder.html  devServer.js  env.json  home.html  index.html  jsconfig.json  karma.conf.continuous-test.js  karma.conf.single-run.js  mergeDependencies.js  package.json  postCompile.js  prod-webpack.config.js  version.txt  webpack.config.js  writeVersion.js
geonode_mapstore_client/migrations/: 0001_clean_prev_version_geoapps.py  0002_migrate_map_blob.py
geonode_mapstore_client/templates/: base.html  index.html  page.html
geonode_mapstore_client/templatetags/: __init__.py  apikey.py  catalogue_urls.py  client_version.py  geonode_mapstore_client_tags.py  get_menu_json.py  local_config.py
mapstore2_adapter/: __init__.py  apps.py  conf.py  context_processors.py  converters.py  hooks.py  models.py  settings.py  urls.py  utils.py
(+675 files in other folders)
