[metadata]
name = django-geonode-mapstore-client
version = 2.1.0
description = Use GeoNode client in your django projects
author = Alessio Fabiani
author_email = alessio.fabiani@geo-solutions.it
url = https://github.com/GeoNode/geonode-mapstore-client
download_url = https://github.com/GeoNode/geonode-mapstore-client/tarball/master
keywords = django, mapstore, mapstore2
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django >= 2.2.0, < 3.0
    idna >= 2.5, < 2.11
    requests >= 2.13.0
    Markdown >= 2.6.11
    MarkupSafe >= 1.1.1
    djangorestframework >= 3.8.2, <= 3.12.2
    jsonfield >= 2.0.2
    urllib3 >= 1.25

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude=geonode_mapstore_client/*/migrations/*,geonode_mapstore_client/mapstore2_adapter/*/migrations/*,management,scripts,docs,static,migrations,geonode_mapstore_client/mapstore2_adapter/*settings.py
ignore=E121,E122,E124,E126,E226
